--- a/Bookshop1/Bookshop1/Views/Books/Edit.cshtml
+++ b/Bookshop1/Bookshop1/Views/Books/Edit.cshtml
@@ -72,13 +72,27 @@
             </div>
         </div>
 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+    
         <div class="form-group">
-            @Html.LabelFor(model => model.image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
-            </div>
+            @Html.LabelFor(model => model.Title)
+            @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Author)
+            @Html.TextBoxFor(model => model.Author, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ImagePath)
+            <input type="file" name="ImageFile" class="form-control" />
+        </div>
+    
+        <button type="submit" class="btn btn-primary">حفظ</button>
+    }
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
