--- a/Bookshop1/Bookshop1/Views/Shared/View.cshtml
+++ b/Bookshop1/Bookshop1/Views/Shared/View.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    ViewBag.Title = "View";
+    Layout = "";
+}
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -129,115 +135,60 @@
 
     </div><!--header-wrap-->
 
-    <section id="billboard">
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+    </div>
 
+    <div id="footer-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
 
-                    <button class="prev slick-arrow">
-                        <i class="icon icon-arrow-left"></i>
-                    </button>
+                    <div class="copyright">
+                        <div class="row">
 
-                    <div class="main-slider pattern-overlay">
-                        <div class="slider-item">
-                            <div class="banner-content">
-                                <h2 class="banner-title">Life of the Wild</h2>
+                            <div class="col-md-6">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
-                                    ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
-                                    urna, a eu.
+                                    © 2022 All rights reserved. Free HTML Template by <a href="https://www.templatesjungle.com/" target="_blank">TemplatesJungle</a>
                                 </p>
-                                <div class="btn-wrap">
-                                    <a href="#" class="btn btn-outline-accent btn-accent-arrow">
-                                        Read More<i class="icon icon-ns-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div><!--banner-content-->
-                            <img src="~/templates/images/main-banner1.jpg" alt="banner" class="banner-image">
-                        </div><!--slider-item-->
-
-                        <div class="slider-item">
-                            <div class="banner-content">
-                                <h2 class="banner-title">Birds gonna be Happy</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
-                                    ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
-                                    urna, a eu.
-                                </p>
-                                <div class="btn-wrap">
-                                    <a href="#" class="btn btn-outline-accent btn-accent-arrow">
-                                        Read More<i class="icon icon-ns-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div><!--banner-content-->
-                            <img src="~/templates/images/main-banner2.jpg" alt="banner" class="banner-image">
-                        </div><!--slider-item-->
-
-                    </div><!--slider-->
-
-                    <button class="next slick-arrow">
-                        <i class="icon icon-arrow-right"></i>
-                    </button>
-
-                </div>
-            </div>
-        </div>
-
-    </section>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        </div>
-
-        <div id="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-
-                        <div class="copyright">
-                            <div class="row">
-
-                                <div class="col-md-6">
-                                    <p>
-                                        © 2022 All rights reserved. Free HTML Template by <a href="https://www.templatesjungle.com/" target="_blank">TemplatesJungle</a>
-                                    </p>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div class="social-links align-right">
-                                        <ul>
-                                            <li>
-                                                <a href="#"><i class="icon icon-facebook"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="#"><i class="icon icon-twitter"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="#"><i class="icon icon-youtube-play"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="#"><i class="icon icon-behance-square"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-
                             </div>
-                        </div><!--grid-->
 
-                    </div><!--footer-bottom-content-->
-                </div>
+                            <div class="col-md-6">
+                                <div class="social-links align-right">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="icon icon-facebook"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon icon-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon icon-youtube-play"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon icon-behance-square"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div><!--grid-->
+
+                </div><!--footer-bottom-content-->
             </div>
         </div>
+    </div>
 
-        <script src="~/templates/js/jquery-1.11.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-                crossorigin="anonymous"></script>
-        <script src="~/templates/js/plugins.js"></script>
-        <script src="~/templates/js/script.js"></script>
+    <script src="~/templates/js/jquery-1.11.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
+    <script src="~/templates/js/plugins.js"></script>
+    <script src="~/templates/js/script.js"></script>
 
 </body>
 
 </html>
+
