--- a/Bookshop1/Bookshop1/Views/Categories/BooksByCategory.cshtml
+++ b/Bookshop1/Bookshop1/Views/Categories/BooksByCategory.cshtml
@@ -15,7 +15,8 @@
                 <div class="product-item">
                     <figure class="product-style">
                         <a href="@Url.Action("Details", "Books", new { id = book.BookID })" class="btn btn-primary">View Details</a>
-                        <img src="~/templates/images/product-item4.jpg" alt="Books" class="product-item">
+                        <img src="@Url.Content(string.IsNullOrEmpty(book.ImagePath) ? "~/Images/placeholder.png" : book.ImagePath)" alt="Books" class="product-item">
+
 
                         <button type="button" class="add-to-cart" data-product-tile="add-to-cart">
                             Add to
