--- a/Bookshop1/Bookshop1/Views/Shared/_Layout.cshtml
+++ b/Bookshop1/Bookshop1/Views/Shared/_Layout.cshtml
@@ -140,41 +140,27 @@
                     </button>
 
                     <div class="main-slider pattern-overlay">
-                        <div class="slider-item">
-                            <div class="banner-content">
-                                <h2 class="banner-title">Life of the Wild</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
-                                    ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
-                                    urna, a eu.
-                                </p>
-                                <div class="btn-wrap">
-                                    <a href="#" class="btn btn-outline-accent btn-accent-arrow">
-                                        Read More<i class="icon icon-ns-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div><!--banner-content-->
-                            <img src="~/templates/images/main-banner1.jpg" alt="banner" class="banner-image">
-                        </div><!--slider-item-->
-
-                        <div class="slider-item">
-                            <div class="banner-content">
-                                <h2 class="banner-title">Birds gonna be Happy</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
-                                    ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
-                                    urna, a eu.
-                                </p>
-                                <div class="btn-wrap">
-                                    <a href="#" class="btn btn-outline-accent btn-accent-arrow">
-                                        Read More<i class="icon icon-ns-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div><!--banner-content-->
-                            <img src="~/templates/images/main-banner2.jpg" alt="banner" class="banner-image">
-                        </div><!--slider-item-->
-
-                    </div><!--slider-->
+                        <!--slider-item-->
+                        @foreach (var book in Model.Books)
+                        {
+                            <div class="slider-item">
+                                <div class="banner-content">
+                                    <h2 class="banner-title">@book.Title</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero
+                                        ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis
+                                        urna, a eu.
+                                    </p>
+                                    <div class="btn-wrap">
+                                        <a href="@Url.Action("Details", "Books", new { id = book.BookID })" class="btn btn-primary" class="btn btn-outline-accent btn-accent-arrow">
+                                            Read More<i class="icon icon-ns-arrow-right"></i>
+                                        </a>
+                                    </div>
+                                </div><!--banner-content-->
+                                <img src="@Url.Content(string.IsNullOrEmpty(book.ImagePath) ? "~/Images/placeholder.png" : book.ImagePath)" alt="banner" class="banner-image">
+                            </div><!--slider-item-->
+                        }
+                        </div><!--slider-->
 
                     <button class="next slick-arrow">
                         <i class="icon icon-arrow-right"></i>
