--- a/Bookshop1/Bookshop1/Views/DashboardStatistics/Index.cshtml
+++ b/Bookshop1/Bookshop1/Views/DashboardStatistics/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@model Bookshop1.Models.DashboardStatistic
 
 @{ ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/dash.cshtml";
 
-   
  }
+
+
+
+
 
 
