--- a/Bookshop1/Bookshop1/Views/Shared/dash.cshtml
+++ b/Bookshop1/Bookshop1/Views/Shared/dash.cshtml
@@ -97,13 +97,20 @@
                             </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Addons</div>
-                        <a class="nav-link" href="charts.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                            Charts
-                        </a>
+
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                            Tables
+                            Table Manage Books
+                        </a>
+
+                        <a class="nav-link" href="tables.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Table Manage Categories
+                        </a>
+
+                        <a class="nav-link" href="tables.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Table Manage Users
                         </a>
                     </div>
                 </div>
@@ -116,21 +123,16 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Static Navigation</h1>
-                    <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                        <li class="breadcrumb-item active">Static Navigation</li>
-                    </ol>
                     <div class="card mb-4">
                         <div class="card-body">
                             <p class="mb-0">
-                                This page is an example of using static navigation. By removing the
-                                <code>.sb-nav-fixed</code>
-                                class from the
+                               
+                                <code></code>
+                               
                                 <code>
                                     @RenderBody()
                                 </code>
-                                , the top navigation and side navigation will become static on scroll. Scroll down this page to see an example.
+                                
                             </p>
                         </div>
                     </div>
