--- a/Bookshop1/Bookshop1/Views/Users/Index.cshtml
+++ b/Bookshop1/Bookshop1/Views/Users/Index.cshtml
@@ -2,56 +2,38 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/dash.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Username)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Username)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
-        </td>
-    </tr>
-}
-
-</table>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="text-center">إدارة المستخدمين</h2>
+            <a href="@Url.Action("Create", "Users")" class="btn btn-primary mb-3">إضافة مستخدم جديد</a>
+            <table class="table table-bordered table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>#</th>
+                        <th>اسم المستخدم</th>
+                        <th>البريد الإلكتروني</th>
+                        <th>الإجراءات</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var user in Model)
+                    {
+        <tr>
+            <td>@user.UserID</td>
+            <td>@user.Username</td>
+            <td>@user.Email</td>
+            <td>
+                <a href="@Url.Action("Edit", "Users", new { id = user.UserID })" class="btn btn-sm btn-warning">تعديل</a>
+                <a href="@Url.Action("Delete", "Users", new { id = user.UserID })" class="btn btn-sm btn-danger">حذف</a>
+                <a href="@Url.Action("Details", "Users", new { id = user.UserID })" class="btn btn-sm btn-info">تفاصيل</a>
+            </td>
+        </tr>}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
