--- a/Bookshop1/Bookshop1/Views/Books/Edit.cshtml
+++ b/Bookshop1/Bookshop1/Views/Books/Edit.cshtml
@@ -98,5 +98,5 @@
             }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "BooksManage")
 </div>
