--- a/Bookshop1/Bookshop1/Views/Books/Details.cshtml
+++ b/Bookshop1/Bookshop1/Views/Books/Details.cshtml
@@ -25,8 +25,34 @@
 
             <!-- إضافة زر إذا كنت تريد دمج عمليات أخرى -->
             <div style="margin-top: 30px;">
-                <a href="#" class="btn-add-to-cart" style="padding: 10px 15px; background-color:#6b4f34 ; color: #f0f0f0; text-decoration: none; border: none; border-radius: 5px; ">إضافة إلى السلة</a>
+                <button type="button" class="add-to-cart" data-product-id="@Model.BookID">
+                    Add to Cart
+                </button>
             </div>
         </div>
     </div>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).on('click', '.add-to-cart', function() {
+        var productId = $(this).data('product-id');
+
+        $.ajax({
+            url: '@Url.Action("AddToCart", "Home")',
+            type: 'POST',
+            data: { id: productId },
+            success: function(response) {
+                if (response.success) {
+                    // توجيه المستخدم إلى صفحة العربة
+                    window.location.href = '@Url.Action("Index", "CartItems")';
+                } else {
+                    alert("Failed to add product to cart.");
+                }
+            },
+            error: function() {
+                alert("An error occurred.");
+            }
+        });
+    });
+</script>
