--- a/Bookshop1/Bookshop1/Views/CartItems/Index.cshtml
+++ b/Bookshop1/Bookshop1/Views/CartItems/Index.cshtml
@@ -1,26 +1,17 @@
 ﻿@model IEnumerable<Bookshop1.Models.CartItem>
-
 @{
     ViewBag.Title = "CartItems";
 }
-
 <h2>CartItems</h2>
-
 <table class="table p-3">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.Quantity)</th>
+        <th>@Html.DisplayNameFor(model => model.Price)</th>
+        <th>@Html.DisplayNameFor(model => model.Title)</th>
         <th>Action</th>
     </tr>
 
-    @foreach (var item in Model)
+    @foreach (var item in Model.Where(x => !x.IsDeleted)) // عرض فقط العناصر غير المحذوفة
     {
         <tr>
             <td><span class="quantity">@item.Quantity</span></td>
@@ -31,13 +22,10 @@
 
                 @using (Html.BeginForm("Delete", "CartItems", new { id = item.CartItemID }, FormMethod.Post, new { onsubmit = "return confirm('Are you sure you want to delete this item?');" }))
                 {
-                    @Html.AntiForgeryToken() <!-- Include the anti-forgery token -->
+                    @Html.AntiForgeryToken()
                     <button type="submit" class="btn btn-danger">Delete</button>
                 }
-
             </td>
         </tr>
     }
-
-
 </table>
